--- a/html/themes/custom/cinder/sass/components/_chat.scss
+++ b/html/themes/custom/cinder/sass/components/_chat.scss
@@ -4,6 +4,14 @@
 	.form-item-user-prompt {
 		display: inline-block;
 	}
+
+	#edit-user-prompt {
+		width: 100%;
+	}
+
+	.form-submit {
+		margin-bottom: 5px;
+	}
 }
 
 #cinder-chatbot-wrapper {
@@ -21,6 +29,18 @@
 		.response {
 			padding-bottom: 15px;
 			padding-top: 15px;
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	#azure-openai-chat-form {
+		.form-item-user-prompt {
+			display: block;
+		}
+
+		.form-submit {
+			width: 100%;
 		}
 	}
 }
